@@ -6,7 +6,8 @@
 #><#@ import namespace="System.Collections.Generic"
 #><#@ import namespace="System.IO"
 #><#@ import namespace="System.Linq" #><#+
-// EFDesigner v1.3.0.7
+
+// EFDesigner v1.3.0.8
 // Copyright (c) 2017-2019 Michael Sawczyn
 // https://github.com/msawczyn/EFDesigner
 
