@@ -9,7 +9,7 @@
 #><#@ import namespace="Microsoft.VisualStudio.TextTemplating"
 #><#+
 
-// EFDesigner v1.3.0.7
+// EFDesigner v1.3.0.8
 // Copyright (c) 2017-2019 Michael Sawczyn
 // https://github.com/msawczyn/EFDesigner
 //
