@@ -36,6 +36,6 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("1.3.0.7")]
-[assembly: AssemblyFileVersion("1.3.0.7")]
+[assembly: AssemblyVersion("1.3.0.8")]
+[assembly: AssemblyFileVersion("1.3.0.8")]
 [assembly: ReliabilityContract(Consistency.MayCorruptProcess, Cer.None)]
